# DeviceForge

./: README.md  pyproject.toml
benchmarks/: compare_iterative_solvers.py
docs/: architecture.md  examples.md  mathematics.md  poisson_solver.md  solver_design.md
examples/: laplace_rectangle.py  pn_junction_equilibrium.py  pn_junction_fixed_charge.py  pn_junction_gummel_1d.py  poisson_uniform_charge.py  validate_pn_junction_equilibrium.py
examples/verification/: algebraic_continuity_diagnostics_pn_junction.py  compare_gummel_implementations.py  continuity_diagnostics_pn_junction.py  mesh_convergence_pn_junction.py
src/deviceforge/: __init__.py
src/deviceforge/analysis/: __init__.py  sweep_result.py  sweep_results.py  voltage_sweep.py  voltage_sweep_simulation.py
src/deviceforge/core/: __init__.py  boundary.py  device.py  field.py  grid.py  (+3 more)
tests/: test_base_solver.py  test_boundary.py  test_continuity.py  test_device.py  test_electric_field.py  test_electrostatics.py  test_equilibrium.py  test_equilibrium_pn_function_example.py  test_equilibrium_pn_junction_example.py  test_equilibrium_poisson.py  test_field.py  test_gauss_seidel.py  test_grid.py  test_gummel_1d.py  test_jacobi.py  test_materials.py  test_pn_junction_example.py  test_poisson_jacobi.py  test_recombination.py  test_region.py  test_result.py  test_scharfetter_gummel.py  test_simulation.py  test_solver_benchmark.py  test_sor.py  test_sweep_result.py  test_sweep_results.py  test_transport.py  test_tridiagonal.py  test_visualisation.py  test_voltage_sweep.py  test_voltage_sweep_simulation.py
(+23 files in other folders)
